Added necessary divs to html.

--- a/Sparkle Stars/twinkle.html
+++ b/Sparkle Stars/twinkle.html
@@ -1,1 +1,11 @@
-twinkle.html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Twinkle Twinkle Little Star</title>
+</head>
+  <body>
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+  </body>
+</html>
