Stars showing up on blank screen.

--- a/Sparkle Stars/twinkle.html
+++ b/Sparkle Stars/twinkle.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Twinkle Twinkle Little Star</title>
+
+  <LINK REL=StyleSheet HREF="twinkle.css" TYPE="text/css">
 </head>
   <body>
     <div class="stars"></div>
