Changed text color and updated font.

--- a/Fade Constellation/constellation.html
+++ b/Fade Constellation/constellation.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Constellation</title>
+  <link href='http://fonts.googleapis.com/css?family=Noto+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="constellation.css">
 </head>
 <body>
